--- a/cs505-pubsub-cep-template/pom.xml
+++ b/cs505-pubsub-cep-template/pom.xml
@@ -135,7 +135,24 @@
             <artifactId>derby</artifactId>
             <version>${derby.version}</version>
         </dependency>
+         
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-client</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
+        <dependency>
+	         <groupId>com.opencsv</groupId>
+	         <artifactId>opencsv</artifactId>
+	         <version>3.8</version>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>activation</artifactId>
+          <version>1.1.1</version>
+        </dependency>
 
 
     </dependencies>
